# doe-suite

./: .boto  .envrc  .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  Dockerfile  Makefile  Pipfile  README.md  ansible-controller.yml  ansible.cfg  clear.yml  experiment-suite.yml  experiment.yml  experiment_load.yml  experiment_load_setup.yml  experiments.yml  id_rsa.pub  pyproject.toml  requirements-collections.yml  scripts-demo.ipynb
cookiecutter-doe-suite-config/{{cookiecutter.repo_name | default("doe-suite-config") }}/: pyproject.toml
cookiecutter-doe-suite-config/{{cookiecutter.repo_name | default("doe-suite-config") }}/designs/: {{ cookiecutter.suite }}.yml
cookiecutter-doe-suite-config/{{cookiecutter.repo_name | default("doe-suite-config") }}/designs/filter_plugins/: helper.py
cookiecutter-doe-suite-config/{{cookiecutter.repo_name | default("doe-suite-config") }}/does_etl_custom/etl/: custom.py
cookiecutter-doe-suite-config/{{cookiecutter.repo_name | default("doe-suite-config") }}/group_vars/all/: main.yml
cookiecutter-doe-suite-config/{{cookiecutter.repo_name | default("doe-suite-config") }}/group_vars/{{ cookiecutter.host_name }}/: main.yml
cookiecutter-doe-suite-config/{{cookiecutter.repo_name | default("doe-suite-config") }}/inventory/: euler.yml  inventory.yml  {{ cookiecutter.custom_cloud }}.yml
cookiecutter-doe-suite-config/{{cookiecutter.repo_name | default("doe-suite-config") }}/super_etl/: paper_plots.yml
cookiecutter-does_config/{{cookiecutter.repo_name | default("does_config") }}/: pyproject.toml
cookiecutter-does_config/{{cookiecutter.repo_name | default("does_config") }}/does_config/etl/: custom.py
cookiecutter-does_config/{{cookiecutter.repo_name | default("does_config") }}/group_vars/all/: main.yml
cookiecutter-does_config/{{cookiecutter.repo_name | default("does_config") }}/group_vars/{{ cookiecutter.host_name }}/: main.yml
demo_project/: .gitignore  demo.py  demo_latency.py  pyproject.toml  server.py
demo_project/doe-suite/: README.md
demo_project/doe-suite-config/: Makefile  pyproject.toml
demo_project/doe-suite-config/designs/: example01-minimal.yml  example02-single.yml  example03-format.yml  example04-multi.yml  example05-complex.yml  example06-vars.yml  example07-etl.yml  example08-superetl.yml
demo_project/doe-suite-config/designs/etl_templates/: config_template.yml
demo_project/doe-suite-config/designs/filter_plugins/: data.py  helper.py
demo_project/doe-suite-config/does_etl_custom/etl/: etl_project_specific.py
demo_project/doe-suite-config/group_vars/all/: main.yml
demo_project/doe-suite-config/group_vars/ansible_controller/: main.yml
demo_project/doe-suite-config/group_vars/client/: main.yml
demo_project/doe-suite-config/group_vars/server/: main.yml
demo_project/doe-suite-config/group_vars/small/: main.yml
demo_project/doe-suite-config/group_vars/small_v2/: main.yml
demo_project/doe-suite-config/inventory/: demoinv.yml  euler.yml  inv-examples.yml  inv-minimal.yml  inv-template.yml
demo_project/doe-suite-config/inventory/docker/: Dockerfile-doe-ubuntu  Dockerfile-example
demo_project/doe-suite-config/super_etl/: debug_etl.ipynb  demo01-minimal.yml  demo02-colcross.yml  demo_plots.yml
demo_project/doe-suite-results-super/demo01-minimal/data/: data.csv
demo_project/doe-suite-results-super/demo02-colcross/custom/: $metrics$=time.html
demo_project/doe-suite-results-super/demo02-colcross/minimal_box/: $metrics$=time.html
demo_project/doe-suite-results-super/demo_plots/grid/: out.html
demo_project/doe-suite-results-super/demo_plots/minimal_box/: $metrics$=time.html
demo_project/doe-suite-results/example01-minimal_$expected/: suite_design.yml  suite_design_ext.yml
demo_project/doe-suite-results/example01-minimal_$expected/minimal/: state.yml
demo_project/doe-suite-results/example02-single_$expected/: suite_design.yml  suite_design_ext.yml
demo_project/doe-suite-results/example02-single_$expected/etl_results/: pipeline1.csv  pipeline2.csv
demo_project/doe-suite-results/example02-single_$expected/experiment_1/: state.yml
demo_project/doe-suite-results/example02-single_$expected/experiment_2/: state.yml
demo_project/doe-suite-results/example03-format_$expected/: suite_design.yml  suite_design_ext.yml
demo_project/doe-suite-results/example03-format_$expected/format_cross/: state.yml
demo_project/doe-suite-results/example03-format_$expected/format_levellist/: state.yml
demo_project/doe-suite-results/example03-format_$expected/format_mixed/: state.yml
demo_project/doe-suite-results/example04-multi_$expected/: suite_design.yml  suite_design_ext.yml
demo_project/doe-suite-results/example05-complex_$expected/: suite_design.yml  suite_design_ext.yml
demo_project/doe-suite-results/example06-vars_$expected/: suite_design.yml  suite_design_ext.yml
demo_project/doe-suite-results/example07-etl_$expected/: suite_design.yml  suite_design_ext.yml
demo_project/doe-suite-results/example08-superetl_$expected/: suite_design.yml  suite_design_ext.yml
demo_project/does_config/: pyproject.toml
demo_project/does_config/designs/: demo.yml  example-complex.yml  example-cross.yml  example-new.yml  example02-single.yml  example03-format.yml  example04-multi.yml  example05-complex.yml  example06-vars.yml
demo_project/does_config/etl/: etl_project_specific.py
demo_project/does_config/group_vars/: .gitignore
demo_project/does_config/myetl/: pyproject.toml
demo_project/does_config/super_etl/: demo_plots.yml
doespy/: pyproject.toml
doespy/docs/source/: conf.py  design.rst  etl.rst  etlold.md  index.rst
doespy/doespy/: __init__.py  info.py  result_clean.py  status.py  util.py
doespy/doespy/comp/: dircomp.py
doespy/doespy/design/: design.py  dutil.py  etl_design.py  exp_design.py  extend.py  validate.py  validate_extend.py
doespy/doespy/etl/: etl.py  etl_base.py  etl_clean.py  etl_debug.py  etl_util.py  super_etl.py
doespy/tests/: conftest.py  test_all_does_results.py  test_does_results.py  test_does_results_all.py  test_etl_pipeline.py
src/doespy/: pyproject.toml
(+481 files in other folders)
