[tool.poetry]
name = "doespy"
version = "0.1.0"
description = ""
authors = ["Nicolas Küchler <nico.kuechler@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
ansible = ">=2.11"
PyYAML = "^6.0"
argparse = "^1.4.0"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
boto3 = "^1.24.3"
Jinja2 = "^3.1.2"
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"