[tool.poetry]
name = "doespy"
version = "0.1.0"
description = ""
authors = ["Nicolas Küchler <nico.kuechler@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
ansible = ">=2.15.5"
argparse = "^1.4.0"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
boto3 = "^1.24.3"
Jinja2 = "^3.1.3"
pyfiglet = "^0.8.post1"
sphinxemoji = "^0.2.0"
pydantic = "^1.9.1"
autodoc-pydantic = "^1.7.2"
importlib-metadata = "^6.0.0"
enum-tools = "^0.9.0.post1"
sphinx-toolbox = "^3.2.0"
Sphinx = "<6.0.0"
shellcheck-py = "^0.9.0.2"
"ruamel.yaml" = "^0.16.12"
sphinxcontrib-autoyaml = "^1.0.0"
sphinxcontrib-programoutput = "^0.17"
sphinx-tabs = "^3.4.1"
sphinx-copybutton = "^0.5.1"
jmespath = "^1.0.1"
gossip = "^2.4.0"
tqdm = "^4.66.3"
cookiecutter = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"