[tool.poetry]
name = "does_etl_custom"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.3.3"
tqdm = "^4.64.0" # custom dependency only for custom etl steps

# link the doe-suite repo integration
doespy = {path = "{{ cookiecutter.relative_path_does_config_to_doespy }}", develop = true}

[tool.poetry.dev-dependencies]
pytest = ">=7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
