[tool.poetry]
name = "does_etl_custom"
version = "0.1.0"
description = ""
authors = ["Nicolas Küchler <nico.kuechler@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.2"
pandas = "^1.3.3"
argparse = "^1.4.0"
tqdm = "^4.66.3" # custom dependency only for custom etl steps

# link the doe-suite repo integration
doespy = {path = "../../doespy", develop = true}

[tool.poetry.dev-dependencies]
pytest = ">=7.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
