[tool.poetry]
name = "doespy"
version = "0.1.0"
description = ""
authors = ["Nicolas Küchler <nico.kuechler@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
argparse = "^1.4.0"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
myetl = {path = "../../demo_project/does_config/myetl"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
etl = "doespy.etl.etl:main"
